--- a/front/sass/pages/index.sass
+++ b/front/sass/pages/index.sass
@@ -5,17 +5,16 @@ $grey: #e8e8e8
 
 
 $font-suisse-reg: 'SuisseIntl-Regular', sans-serif
-$font-suisse-med: SuisseIntl-Medium, sans-serif // 500
+$font-suisse-med: 'SuisseIntl-Medium', sans-serif // 500
 $font-suisse-semb: 'SuisseIntl-SemiBold', sans-serif // 600
 $font-wulkan: 'WulkanDisplay-SemiBoldItalic', sans-serif
 
 body
-  background: $blue
+  background: $magenta
   overscroll-behavior: none
 
 .hide
   display: none !important
-
 .fav-page
   width: 100%
   height: 100%
@@ -33,6 +32,8 @@ body
   left: 0
   right: 0
   z-index: 5
+  display: none
+  overflow: hidden
 
 .bonus
   position: relative
@@ -40,122 +41,79 @@ body
   justify-content: flex-end
   align-items: center
   height: 100%
-  padding-right: 104px
+  padding-right: 208px
+  &__light
+    position: absolute
+    bottom: -170px
+    left: 0
+    width: 100%
+    height: 410px
+    background: linear-gradient(180deg, rgba(243, 0, 99, 0) 0%, #FF267E 61.98%)
+    z-index: 1
   &__logo
-    width: 462px
+    width: 405px
     position: absolute
     top: 0
     left: 0
-    z-index: 1
+    z-index: 4
   &__img
-    max-width: 80vw
+    height: 100vh
+    width: 94vh
     position: absolute
-    left: 0
+    left: 150px
     bottom: 0
     top: 0
     display: flex
     align-items: center
   &__right
-    display: flex
-    flex-direction: column
-    align-items: center
     position: relative
-    z-index: 1
-    margin-top: 80px
+    z-index: 4
+    margin-top: 110px
     &-title
-      display: flex
-      align-items: flex-end
-      margin: 0 0 15px 0
-      &-left
-        font-family: $font-wulkan
-        font-size: 80px
-        line-height: 72px
-        letter-spacing: 0.03em
-        text-transform: uppercase
-        color: $magenta
-        margin: 0 25px 0 0
-      &-right
-        font-family: $font-suisse-med
-        font-size: 18px
-        line-height: 20px
-        color: $magenta
-        letter-spacing: 0.04em
-        text-transform: uppercase
-        span
-          color: rgba(255, 38, 126, 0.7)
-      &-prom
-        font-family: $font-suisse-semb
-        font-size: 80px
-        line-height: 94px
-        color: $grey
-        text-align: center
-
-
-    &-subtitle
-      margin: 26px 0
-      display: flex
-      justify-content: center
-      align-items: flex-start
-      &-left,
-      &-right
-        span
-          font-family: $font-wulkan
-          font-size: 42px
-          line-height: 36px
-          letter-spacing: 0.02em
-          text-transform: uppercase
-          color: #ffffff
-          padding: 1px 27px
-          display: inline-block
-          background: $magenta
-      &-left
-        margin: 0 30px 0 0
-        span
-          margin: 0 0 10px 0
-      &-right
-        span
-          margin: 0 0 7px 0
-      &-text
-        font-family: $font-suisse-med
-        letter-spacing: 0.02em
-        text-transform: uppercase
-        color: #ffffff
-        font-size: 15px
-        line-height: 20px
-        text-align: center
-      &-price
-        font-family: $font-suisse-med
-        color: rgba(255, 255, 255, 0.7)
-        letter-spacing: 0.02em
-        text-transform: uppercase
-        font-size: 13px
-        line-height: 20px
-        text-align: center
-        margin: 0 0 7px 0
-
-    &-btn
-      display: inline-block
-      font-family: $font-suisse-semb
-      background: $green
-      color: $blue
-      font-size: 18px
-      line-height: 23px
+      font-family: $font-suisse-med
+      font-size: 120px
+      line-height: 156px
       text-transform: uppercase
-      padding: 23px 87px 21px
-      letter-spacing: 0.08em
-      border-radius: 5px
-      margin: 0 0 40px 0
-    &-copy
+      color: #FFFFFF
+      margin: 0 0 10px 0
+    &-text
+      position: relative
       display: flex
-      flex-direction: column
       align-items: center
-      &-top
-        margin: 0 0 16px 0
-        img
-          display: inline-block
-          margin: 0 21px 0 0
-          &:last-child
-            margin: 0
+      margin: 0 0 95px 0
+      span
+        display: inline-block
+        padding: 10px 17px 8px
+        font-family: $font-suisse-med
+        font-size: 54px
+        line-height: 70px
+        text-transform: uppercase
+        color: #FFFFFF
+        background: $blue
+        &:first-child
+          margin: 0 45px 0 0
+      img
+        position: absolute
+        max-width: 63px
+        top: 50%
+        right: 188px
+        transform: translateY(-50%)
+    &-link
+      display: inline-block
+      padding: 26px 87px 24px
+      border-radius: 6px
+      position: relative
+      font-family: $font-suisse-med
+      font-size: 30px
+      line-height: 39px
+      text-transform: uppercase
+      color: $blue
+      background: $green
+      transition: background-color .3s ease
+      &:hover
+        background: #15E0A2
+      &:active
+        background: #07A172
 
 
 .parallax
@@ -163,6 +121,7 @@ body
   height: 100%
   position: absolute
   top: 0
+  z-index: 2
   &__layer
     height: 100%
     right: 0
@@ -177,86 +136,87 @@ body
         position: absolute
     .item-1
       background: url("../img/card-1.png") no-repeat 0 0/contain
-      width: 397px
-      height: 386px
-      bottom: 40px
-      right: 700px
-      &:before
-        bottom: 125px
-        right: 70px
-        opacity: 0
-        animation: 2s fade linear infinite
+      width: 504px
+      height: 553px
+      bottom: -247px
+      right: 604px
+      &:before,
       &:after
-        bottom: -10px
-        right: 90px
-        opacity: 0
-        animation: 2s fade 1s linear infinite
+        content: none
     .item-2
-      background: url("../img/card-2.png") no-repeat 0 0/contain
-      width: 273px
-      height: 233px
-      bottom: 20px
-      left: 80px
+      background: url("../img/chip-1.png") no-repeat 0 0/contain
+      width: 379px
+      height: 354px
+      bottom: -161px
+      left: 104px
       &:before
-        bottom: 70px
+        bottom: 172px
         right: 110px
         opacity: 0
         animation: 2s fade linear infinite
       &:after
-        bottom: -30px
-        right: 124px
+        bottom: 52px
+        right: 181px
         opacity: 0
         animation: 2s fade 1s linear infinite
     .item-3
-      background: url("../img/card-3.png") no-repeat 0 0/contain
-      width: 352px
-      height: 259px
-      top: 158px
-      right: 190px
+      background: url("../img/chip-3.png") no-repeat 0 0/contain
+      width: 330px
+      height: 290px
+      top: 95px
+      right: 106px
       &:before
-        top: -20px
-        right: 49px
+        top: 4px
+        right: 44px
         opacity: 0
         animation: 2s fade linear infinite
       &:after
-        top: 44px
+        top: 16px
         right: -16px
         opacity: 0
         animation: 2s fade 1s linear infinite
     .item-4
-      background: url("../img/chip-1.png") no-repeat 0 0/contain
-      width: 324px
-      height: 253px
-      top: 300px
-      left: -73px
+      background: url("../img/card-2.png") no-repeat 0 0/contain
+      width: 377px
+      height: 353px
+      top: 526px
+      left: -70px
     .item-5
       background: url("../img/chip-2.png") no-repeat 0 0/contain
-      width: 147px
-      height: 173px
-      top: 100px
-      left: 500px
+      width: 286px
+      height: 335px
+      top: 137px
+      left: 198px
       &:before
-        top: -27px
-        right: 51px
+        top: 2px
+        right: 102px
         opacity: 0
         animation: 2s fade linear infinite
       &:after
         content: none
     .item-6
-      background: url("../img/chip-3.png") no-repeat 0 0/contain
-      width: 355px
-      height: 267px
-      top: -75px
-      right: 530px
+      background: url("../img/card-4.png") no-repeat 0 0/contain
+      width: 337px
+      height: 357px
+      top: -78px
+      right: 452px
     .item-7
       background: url("../img/chip-4.png") no-repeat 0 0/contain
-      width: 480px
-      height: 323px
-      bottom: 91px
-      right: -214px
-    .item-4,.item-6,.item-7
+      width: 415px
+      height: 440px
+      bottom: -214px
+      right: 73px
+    .item-8
+      background: url("../img/card-3.png") no-repeat 0 0/contain
+      width: 393px
+      height: 416px
+      top: 277px
+      left: -38px
+    .item-4,.item-6,.item-7, .item-8
       &:before,&:after
         content: none
+
+
 
 @keyframes fade
   0%
