add main-link and save image

--- a/front/pug/pages/BuildIndex.pug
+++ b/front/pug/pages/BuildIndex.pug
@@ -1,5 +1,5 @@
 .fav-page
-  a(href="https://www.favbet.hr/hr/registracija/").main-link
+  a(href="#").main-link
   .bonus
     .bonus__light
     .bonus__logo
